# Unido-third-mobile

./: .gitignore  DOCUMENTATION.md  Implementation_research_report.md  README.md  download_unido_images.py  requirements.txt  train_all_specialists.py
Data/: DataDictionary.csv  SampleSubmission.csv  Train.csv
mobile_convert/: README.md  pyproject.toml
mobile_convert/mobile_convert/: __init__.py  cli.py
mobile_convert/mobile_convert/bench/: __init__.py  ort_bench.py
mobile_convert/mobile_convert/config/: default.yaml  kaggle_tpu_v5e8.yaml  local_cpu_debug.yaml
mobile_convert/mobile_convert/data/: dataset.py  schema.py  tiling.py
mobile_convert/mobile_convert/eval/: __init__.py  drift_gates.py  metrics.py
mobile_convert/mobile_convert/export/: fp16_convert.py  onnx_export.py
mobile_convert/mobile_convert/models/: architecture.py  losses.py
mobile_convert/mobile_convert/train/: __init__.py  checkpointing.py  engine.py  xla_runner.py
mobile_convert/mobile_convert/utils/: io.py  logging.py  seeding.py
mobile_convert/scripts/: kaggle_bootstrap.sh  kaggle_train_export.sh
mobile_convert/tests/: test_cli_smoke.py  test_onnx_parity_smoke.py  test_schema.py  test_tiling_shapes.py
test_mobile_image/: image_data.csv
